<resources>
    <string name="app_name">RedBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_invertebrates">Invertebrates(Безпозвоночные)</string>
    <string name="menu_fishes">Fishes(Рыбы)</string>
    <string name="menu_reptiles">Reptiles(Пресмыкающиеся)</string>
    <string name="menu_birds">Birds(Птицы)</string>
    <string name="menu_mammals">Mammals(Млекопитающие)</string>
    <string name="favourite">Favourite(Избранные)</string>
</resources>
