<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invertebrates"
            android:title="@string/menu_invertebrates" />
        <item
            android:id="@+id/nav_fishes"
            android:title="@string/menu_fishes" />
        <item
            android:id="@+id/nav_reptiles"
            android:title="@string/menu_reptiles" />
        <item
            android:id="@+id/nav_birds"
            android:title="@string/menu_birds" />
        <item
            android:id="@+id/nav_mammals"
            android:title="@string/menu_mammals" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_favourite"
                android:title="@string/favourite"/>
        </menu>
    </item>
</menu>
